# python-recipe-processor

./: .gitignore  README.md  flake.nix  hello.py  pyproject.toml  rpr.py
python_recipe_processor/: __init__.py  main.py
python_recipe_processor/parsers/: anthropic.py  imageBase64Converter.py  ollama.py  openapi.py
